--- a/.github/workflows/describe_instances.yml
+++ b/.github/workflows/describe_instances.yml
@@ -1,12 +1,32 @@
 name: Describe EC2 instances
-
-
-on:
-    push
-
+on: push
 jobs:
-    describe:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Describe AWS EC2 instances
-            run: aws ec2 describe-instances
+  describe:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: us-east-1 # Substitua pela sua região
+
+      - name: Describe AWS EC2 instances
+        run: aws ec2 describe-instances
+
+#name: Describe EC2 instances
+#
+#
+#on:
+#    push
+#
+#jobs:
+#    describe:
+#        runs-on: ubuntu-latest
+#        steps:
+#        - name: Describe AWS EC2 instances
+#            run: aws ec2 describe-instances
